# fcf-editor

./: .gitignore  README.md
backend/: Cargo.toml  ReadMe.txt
backend/src/: FCF.pest  fcf.rs  lib.rs  main.rs  parser.rs
frontends/: build.bat
frontends/src/: FCF.elm  FCFEditor.elm  FCFView.elm  Main.elm
