[package]
name = "backend"
version = "0.1.0"
authors = ["Tibor Prokai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
json = "*"
futures = "0.3.1"
actix-web = "2.0"
actix-rt = "1.0"
clap = "2.33.0"
pest = "2.1.2"
pest_derive = "2.1.0"

# [lib]
# name = "sm_backend"
# crate-type = ["cdylib"] # could be `staticlib` as well
